# tracking-expenses

./: .dockerignore  .gitignore  CHANGELOG  CHANGELOG.md  Dockerfile  Justfile  arion-compose.nix  cabal.project  code-gen.yaml  dovecot.conf  flake.nix  generate_manifest.sh  instrospection.json  nodockercompose.yaml  pyproject.toml  start.sh  tracking-expenses.cabal
app/: App.hs  AppEnv.hs  Cli.hs  Config.hs  Env.hs  Graphql.hs  ImapMonad.hs  Main.hs  MonadTime.hs  Scrapper.hs
app/Schema/: Mutation.hs  Schema.hs  mutation.gql  schema.gql
app/Schema/Mutations/: DeleteBankById.hs  DeleteBanks.hs  DeleteCommerceById.hs  DeleteCommerces.hs  DeleteExpenseById.hs  DeleteExpenses.hs  InsertBankOne.hs  InsertBanks.hs  InsertCommerceOne.hs  InsertCommerces.hs  InsertExpenseOne.hs  InsertExpenses.hs  UpdateBankById.hs  UpdateBanks.hs  UpdateBanksMany.hs  UpdateCommerceById.hs  UpdateCommerces.hs  UpdateCommercesMany.hs  UpdateExpenseById.hs  UpdateExpenses.hs  UpdateExpensesMany.hs  delete_bank_by_id.gql  delete_commerces.gql  delete_expense_by_id.gql  delete_expenses.gql  insert_bank_one.gql  insert_commerces.gql  insert_expense_one.gql  update_bank_by_id.gql  update_banks.gql  update_commerce_by_id.gql  update_commerces.gql  update_commerces_many.gql  update_expense_by_id.gql  update_expenses.gql
expenses_tracker_db/migrations/default/1729640511347_init/: down.sql  up.sql
expenses_tracker_db/migrations/default/1735448041730_nullable/: up.sql
expenses_tracker_db/migrations/default/1735448438462_remove_location/: up.sql
expenses_tracker_db/migrations/default/1735448634933_date_nullable/: up.sql
src/: BacScrapper.hs  BancoChileScrapper.hs  Cli.hs  Graphql.hs  ImapMonad.hs  Scrapper.hs  ScrapperBuilder.hs  Types.hs
src/Schema/: Schema_generate.hs  schema_generate.gql
src/Schema/Mutations/: DeleteBankById.hs  DeleteCommerceById.hs  DeleteCommerces.hs  DeleteExpenses.hs  InsertBankOne.hs  InsertBanks.hs  InsertCommerceOne.hs  InsertCommerces.hs  UpdateBankById.hs  UpdateCommerceById.hs  UpdateExpenseById.hs  UpdateExpensesMany.hs  delete_banks.gql  delete_commerce_by_id.gql  insert_banks.gql  insert_commerce_one.gql  insert_expenses.gql  normalize.sh  update_banks_many.gql  update_expenses_many.gql
test/: BancoChileScrapperSpec.hs  email.txt
tracking_expenses_db/: config.yaml
tracking_expenses_db/metadata/databases/: databases.yaml
tracking_expenses_db/metadata/databases/localdb/tables/: expenses_bac_credomatic.yaml  expenses_commerces.yaml  public_expenses_bac_credomatic.yaml  tables.yaml
tracking_expenses_db/migrations/localdb/1652646533316_init/: up.sql
tracking_expenses_db/migrations/localdb/1652650506283_create_table_expenses_commerces/: down.sql  up.sql
tracking_expenses_db/migrations/localdb/1714355684453_create_table_public_expenses_bac_credomatic/: down.sql  up.sql
tracking_expenses_db/migrations/localdb/1714356274725_alter_table_public_expenses_bac_credomatic_alter_column_id/: down.sql  up.sql
trackpenses/: all.py  daily_report.py  main.py  monthly.py  notmuch.py  yearly.py
ui/: .nvimrc  README.md  elm-land.json  elm-srcs.nix  elm.json  flake.nix  package-lock.json  package.json
ui/src/: GraphQLClient.elm  View.elm
ui/src/Expenses/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Subscription.elm  Union.elm  VerifyScalarCodecs.elm
ui/src/Expenses/Enum/: Expenses_bac_credomatic_constraint.elm  Expenses_bac_credomatic_select_column.elm  Expenses_bac_credomatic_update_column.elm  Order_by.elm
ui/src/Expenses/Object/: Expenses_bac_credomatic.elm  Expenses_bac_credomatic_aggregate.elm  Expenses_bac_credomatic_aggregate_fields.elm  Expenses_bac_credomatic_avg_fields.elm  Expenses_bac_credomatic_max_fields.elm  Expenses_bac_credomatic_min_fields.elm  Expenses_bac_credomatic_mutation_response.elm  Expenses_bac_credomatic_stddev_fields.elm  Expenses_bac_credomatic_stddev_pop_fields.elm  Expenses_bac_credomatic_stddev_samp_fields.elm  Expenses_bac_credomatic_sum_fields.elm  Expenses_bac_credomatic_var_pop_fields.elm  Expenses_bac_credomatic_var_samp_fields.elm  Expenses_bac_credomatic_variance_fields.elm
ui/src/Pages/: Home_.elm
ui/src/Tailwind/: Breakpoints.elm  Theme.elm  Utilities.elm
ui/src/TrackingExpenses/: InputObject.elm  Interface.elm  Mutation.elm  Object.elm  Query.elm  Scalar.elm  ScalarCodecs.elm  Subscription.elm  Union.elm  VerifyScalarCodecs.elm
ui/src/TrackingExpenses/Enum/: Expenses_bac_credomatic_constraint.elm  Expenses_bac_credomatic_select_column.elm  Expenses_bac_credomatic_update_column.elm  Order_by.elm
ui/src/TrackingExpenses/Object/: Expenses_bac_credomatic.elm  Expenses_bac_credomatic_aggregate.elm  Expenses_bac_credomatic_aggregate_fields.elm  Expenses_bac_credomatic_avg_fields.elm  Expenses_bac_credomatic_max_fields.elm  Expenses_bac_credomatic_min_fields.elm  Expenses_bac_credomatic_mutation_response.elm  Expenses_bac_credomatic_stddev_fields.elm  Expenses_bac_credomatic_stddev_pop_fields.elm  Expenses_bac_credomatic_stddev_samp_fields.elm  Expenses_bac_credomatic_sum_fields.elm  Expenses_bac_credomatic_var_pop_fields.elm  Expenses_bac_credomatic_var_samp_fields.elm  Expenses_bac_credomatic_variance_fields.elm
