[tool.poetry]
name = "tracking_expenses"
version = "0.1.0"
description = "An small tool to track bac credomatic expenses notifications"
authors = ["Christopher Valerio <test@test.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.9.3"
notmuch2 = "^0.1"
gql = {extras = ["all"], version = "^3.4.1"}
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]
bpython = "^0.21"
debugpy = "^1.3.0"
jedi-language-server = "^0.34.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
