cabal-version:      3.0
name:               tracking-expenses
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
author:             Christopher Valerio
maintainer:         test@test.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

data-files:
    app/Schema/schema.gql

common warnings
    ghc-options: -Wall

executable tracking-expenses
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Scrapper
        Env
        Graphql
        Schema.Schema
        Schema.Mutation

    -- other-extensions: 
    build-depends:    
       base ^>=4.18.2.1
        , HaskellNet
        , HaskellNet-SSL
        , bytestring
        , utf8-string
        , purebred-email
        , generic-lens
        , lens
        , old-time
        , time
        , flow
        , tagsoup
        , transformers
        , text 
        , regex-tdfa
        , uuid-types
        , aeson
        , morpheus-graphql
        , morpheus-graphql-core
        , morpheus-graphql-client
        , morpheus-graphql-code-gen
        , morpheus-graphql-subscriptions

    hs-source-dirs:   app
    default-language: Haskell2010
