cabal-version:      3.0
name:               tracking-expenses
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
author:             Christopher Valerio
maintainer:         test@test.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

data-files:
    app/Schema/schema.gql

common warnings
    ghc-options:          -Wall
                          -Wincomplete-uni-patterns
                          -Wincomplete-record-updates
                          -Wcompat
                          -Widentities
                          -Wredundant-constraints
                          -fhide-source-paths
                          -Wpartial-fields

executable tracking-expenses
    import:           warnings
    main-is:          Main.hs
    other-modules:
        App
        Config
        Cli
        Scrapper
        AppEnv
        Graphql
        MonadTime
        ImapMonad
        Types
        Schema.Schema
        Schema.Mutations.UpdateCommerces
        Schema.Mutations.DeleteBanks
        Schema.Mutations.UpdateBanks
        Schema.Mutations.DeleteCommerces
        Schema.Mutations.InsertExpenseOne
        Schema.Mutations.InsertExpenses
        Schema.Mutations.UpdateExpenseById
        Schema.Mutations.InsertBankOne
        Schema.Mutations.InsertBanks
        Schema.Mutations.UpdateBanksMany
        Schema.Mutations.UpdateCommerceById
        Schema.Mutations.UpdateExpenses
        Schema.Mutations.UpdateBankById
        Schema.Mutations.DeleteExpenseById
        Schema.Mutations.UpdateExpensesMany
        Schema.Mutations.InsertCommerceOne
        Schema.Mutations.UpdateCommercesMany
        Schema.Mutations.InsertCommerces
        Schema.Mutations.DeleteCommerceById
        Schema.Mutations.DeleteExpenses
        Schema.Mutations.DeleteBankById

    -- other-extensions: 
    build-depends:    
       base ^>=4.18.2.1
        , geojson
        , HaskellNet
        , network
        , mtl
        , optparse-applicative
        , HaskellNet-SSL
        , bytestring
        , utf8-string
        , purebred-email
        , generic-lens
        , lens
        , old-time
        , time
        , flow
        , tagsoup
        , transformers
        , text 
        , regex-tdfa
        , uuid-types
        , uuid
        , mmzk-typeid
        , aeson
        , morpheus-graphql
        , morpheus-graphql-core
        , morpheus-graphql-client
        --, morpheus-graphql-code-gen
        , morpheus-graphql-subscriptions

    hs-source-dirs:   app
    default-language: Haskell2010
